fix: host images in a server and change urls

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="https://i.ibb.co/d7svKBY/hero.png" alt="">
                 </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Morte Mors.</span>
+                    Hi, I'm <span>Morte Mors</span>
                     A Web Developer.
                 </h1>
                 <p>
@@ -223,7 +223,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="https://i.ibb.co/xJz64rY/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="https://i.ibb.co/J7vf26R/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="https://i.ibb.co/X2SCQC1/port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -280,7 +280,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port4.jpg" alt="">
+                        <img src="https://i.ibb.co/41gBqZt/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -299,7 +299,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="https://i.ibb.co/G769Chv/port5.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -318,7 +318,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="https://i.ibb.co/9s7f991/port6.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -337,7 +337,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port7.jpg" alt="">
+                        <img src="https://i.ibb.co/1nJGQXv/port7.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/port6.jpg" alt="">
+                        <img src="https://i.ibb.co/1nJGQXv/port7.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 How to Create Your Own Website
@@ -375,7 +375,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
+                        <img src="https://i.ibb.co/JvwygHF/blog1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 How to Become an Expert in Web Design
@@ -387,7 +387,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
+                        <img src="https://i.ibb.co/vsHttnJ/blog2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Become a Web Designer in 10 Days
@@ -399,7 +399,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
+                        <img src="https://i.ibb.co/JkxK5VM/blog3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Debbuging made easy with Web Inspector
@@ -411,7 +411,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="https://i.ibb.co/xJz64rY/port1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Get started with Web Design and UI Design
@@ -423,7 +423,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="https://i.ibb.co/X2SCQC1/port3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 This is what you need to know about Web Design
@@ -453,46 +453,37 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span>Location</span>
+                                    <span>Location:</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                     Ribeirão Preto, São Paulo - Brasil
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email</span>
+                                    <span>Email:</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span> o-morte@hotmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <span>Education:</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
-                                </p>
-                            </div>
-                            <div class="contact-item">
-                                <div class="icon">
-                                    <i class="fas fa-user-graduate"></i>
-                                    <span>Mobile Number</span>
-                                </div>
-                                <p>
-                                    <span>: 07522670617</span>
+                                    <span> Ciência da Computação, UNIP</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
-                                    <span>Languages</span>
+                                    <span>Languages:</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span> English, Portuguese (BR)</span>
                                 </p>
                             </div>
                         </div>
